--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "start": "node bin/bot.js",
     "dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/bot.ts"
   },
   "author": "BristerMitten",
